# Contact-Detail-Agent

./: .env.example  .gitignore  README.md  index.py  pyproject.toml  show_contacts.py  test_simple.py
agents/: analyst_agent.py  scraper_agent.py  search_agent.py
config/: settings.yaml
storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __RQ_STATE_08GpDpVM1nIDvVROR
tools/: crawler_toolkit.py  mailer_toolkit.py  search_toolkit.py  trade_validator.py  verification_toolkit.py
utils/: llm_extractor.py  output_writer.py
